# ya.dotdict.py

./: .gitignore  GitVersion.yml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  pythonpackage.yml  testing.yml
src/ya/: dotdict.py
test/: test_dotdict.py  test_dummy.py  test_mixin.py
