[metadata]
name = ya.dotdict.py
version = 0.0.1
description = Attribute access for dictionary-like objects
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/knowikow/ya.dotdict.py
classifiers  =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
dev = pytest; flake8

[tool:pytest]
testpaths = test
