[metadata]
name = ya.dotdict.py
version = 0.0.1
description = Attribute access for dictionary-like objects
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/knowikow/ya.dotdict.py
classifiers  =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov
    flake8
dev =
    mutmut

[tool:pytest]
# addopts = --cov=src

[flake8]
max-line-length = 100

[mutmut]
paths_to_mutate=src/
tests_dir=tests/

[tox:tox]
envlist = py37

[testenv]
usedevelop = true
whitelist_externals = rm
extras =
    dev
    testing
commands_pre =
    rm -f .mutmut-cache
commands =
    flake8
    pytest
    mutmut run

# vim:et sw=4 ts=4
