[metadata]
name = ya.dotdict
version = attr: ya.dotdict.__version__
description = Attribute access for dictionary-like objects
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE
url = https://github.com/knowikow/ya.dotdict.py
classifiers  =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov
    flake8
dev =
    mutmut

[tool:pytest]
# addopts = --cov=src

[flake8]
max-line-length = 100

[mutmut]
paths_to_mutate=src/
tests_dir=tests/

[tox:tox]
envlist = py37

[testenv]
usedevelop = true
whitelist_externals = rm
extras =
    dev
    testing
commands_pre =
    rm -f .mutmut-cache
commands =
    flake8
    pytest
    mutmut run

# vim:et sw=4 ts=4
